--- a/spotify_scouting/web_pages/index.html
+++ b/spotify_scouting/web_pages/index.html
@@ -3,150 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Input Page</title>
+    <title>Spotify Scout</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-md w-96">
-        <h1 class="text-2xl font-bold mb-4 text-center">Advanced Input</h1>
+    <div class="flex space-x-4 max-w-4xl w-full">
+        <div class="bg-white p-8 rounded-lg shadow-md w-96 flex-shrink-0">
 
-        <!-- Randomize Checkbox -->
-        <div class="mb-4">
-            <label class="inline-flex items-center">
-                <input
-                    type="checkbox"
-                    id="randomizeCheckbox"
-                    name="randomize"
-                    class="form-checkbox h-5 w-5 text-blue-600"
-                    onchange="toggleRandomize()"
-                >
-                <span class="ml-2 text-gray-700">Randomize</span>
-            </label>
-        </div>
+            <h1 class="text-2xl font-bold mb-4 text-center">Parameters</h1>
 
-        <!-- Sliders -->
-        <div class="space-y-4">
-            <div>
-                <label for="targetAcousticness" class="block text-sm font-medium text-gray-700">Target acousticness</label>
-                <input
-                    type="range"
-                    id="targetAcousticness"
-                    name="targetAcousticness"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetAcousticnessValue" class="text-sm text-gray-600">50</span>
-            </div>
-
-            <div>
-                <label for="targetLiveness" class="block text-sm font-medium text-gray-700">Target liveness</label>
-                <input
-                    type="range"
-                    id="targetLiveness"
-                    name="targetLiveness"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetLivenessValue" class="text-sm text-gray-600">50</span>
-            </div>
-
-            <div>
-                <label for="targetDanceability" class="block text-sm font-medium text-gray-700">Target danceability</label>
-                <input
-                    type="range"
-                    id="targetDanceability"
-                    name="targetDanceability"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetDanceabilityValue" class="text-sm text-gray-600">50</span>
-            </div>
-
-            <div>
-                <label for="targetValence" class="block text-sm font-medium text-gray-700">Target valence</label>
-                <input
-                    type="range"
-                    id="targetValence"
-                    name="targetValence"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetValenceValue" class="text-sm text-gray-600">50</span>
-            </div>
-
-            <div>
-                <label for="targetEnergy" class="block text-sm font-medium text-gray-700">Target energy</label>
-                <input
-                    type="range"
-                    id="targetEnergy"
-                    name="targetEnergy"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetEnergyValue" class="text-sm text-gray-600">50</span>
-            </div>
-
-            <div>
-                <label for="targetPopularity" class="block text-sm font-medium text-gray-700">Target popularity</label>
-                <input
-                    type="range"
-                    id="targetPopularity"
-                    name="targetPopularity"
-                    min="0"
-                    max="100"
-                    value="0"
-                    class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input-no-randomize"
-                    oninput="updateSliderValue(this)"
-                >
-                <span id="targetPopularityValue" class="text-sm text-gray-600">0</span>
-            </div>
-
-            <!-- By Artist Checkbox -->
-            <div class="mt-4">
+            <!-- Randomize Checkbox -->
+            <div class="mb-4">
                 <label class="inline-flex items-center">
                     <input
                         type="checkbox"
-                        id="byArtistCheckbox"
-                        name="byArtist"
+                        id="randomizeCheckbox"
+                        name="randomize"
                         class="form-checkbox h-5 w-5 text-blue-600"
+                        onchange="toggleRandomize()"
                     >
-                    <span class="ml-2 text-gray-700">By Artist</span>
+                    <span class="ml-2 text-gray-700">Randomize</span>
                 </label>
             </div>
-        </div>
 
-        <!-- Text Input and Submit Button -->
-        <div class="flex space-x-2 mt-4">
-            <input 
-                type="text" 
-                id="textInput" 
-                name="userInput"
-                placeholder="Type something here..."
-                class="flex-grow p-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            >
-            <button 
-                onclick="handleSubmit()" 
-                class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300"
-            >
-                Submit
-            </button>
+            <!-- Sliders -->
+            <div class="space-y-4">
+                <div>
+                    <label for="targetAcousticness" class="block text-sm font-medium text-gray-700">Target acousticness</label>
+                    <input
+                        type="range"
+                        id="targetAcousticness"
+                        name="targetAcousticness"
+                        min="0"
+                        max="100"
+                        value="50"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetAcousticnessValue" class="text-sm text-gray-600">50</span>
+                </div>
+
+                <div>
+                    <label for="targetLiveness" class="block text-sm font-medium text-gray-700">Target liveness</label>
+                    <input
+                        type="range"
+                        id="targetLiveness"
+                        name="targetLiveness"
+                        min="0"
+                        max="100"
+                        value="50"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetLivenessValue" class="text-sm text-gray-600">50</span>
+                </div>
+
+                <div>
+                    <label for="targetDanceability" class="block text-sm font-medium text-gray-700">Target danceability</label>
+                    <input
+                        type="range"
+                        id="targetDanceability"
+                        name="targetDanceability"
+                        min="0"
+                        max="100"
+                        value="50"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetDanceabilityValue" class="text-sm text-gray-600">50</span>
+                </div>
+
+                <div>
+                    <label for="targetValence" class="block text-sm font-medium text-gray-700">Target valence</label>
+                    <input
+                        type="range"
+                        id="targetValence"
+                        name="targetValence"
+                        min="0"
+                        max="100"
+                        value="50"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetValenceValue" class="text-sm text-gray-600">50</span>
+                </div>
+
+                <div>
+                    <label for="targetEnergy" class="block text-sm font-medium text-gray-700">Target energy</label>
+                    <input
+                        type="range"
+                        id="targetEnergy"
+                        name="targetEnergy"
+                        min="0"
+                        max="100"
+                        value="50"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetEnergyValue" class="text-sm text-gray-600">50</span>
+                </div>
+
+                <div>
+                    <label for="targetPopularity" class="block text-sm font-medium text-gray-700">Target popularity</label>
+                    <input
+                        type="range"
+                        id="targetPopularity"
+                        name="targetPopularity"
+                        min="0"
+                        max="100"
+                        value="0"
+                        class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer slider-input-no-randomize"
+                        oninput="updateSliderValue(this)"
+                    >
+                    <span id="targetPopularityValue" class="text-sm text-gray-600">0</span>
+                </div>
+
+                <!-- By Artist Checkbox -->
+                <div class="mt-4">
+                    <label class="inline-flex items-center">
+                        <input
+                            type="checkbox"
+                            id="byArtistCheckbox"
+                            name="byArtist"
+                            class="form-checkbox h-5 w-5 text-blue-600"
+                        >
+                        <span class="ml-2 text-gray-700">By Artist</span>
+                    </label>
+                </div>
+            </div>
+
+            <!-- Text Input and Submit Button -->
+            <div class="flex space-x-2 mt-4">
+                <input
+                    type="text"
+                    id="textInput"
+                    name="userInput"
+                    placeholder="Type something here..."
+                    class="flex-grow p-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                >
+                <button
+                    onclick="handleSubmit()"
+                    class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300"
+                >
+                    Submit
+                </button>
+            </div>
+            <p id="output" class="mt-4 text-center"></p>
         </div>
-        <p id="output" class="mt-4 text-center"></p>
+        <!-- Jobs Container -->
+        <div class="bg-white p-8 rounded-lg shadow-md w-96 flex-shrink-0">
+            <h2 class="text-lg font-bold mb-4 text-center">Running Jobs</h2>
+            <div id="jobsContainer" class="bg-gray-50 p-4 rounded-lg min-h-[500px]">
+                <p class="text-center text-gray-500">Loading jobs...</p>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -192,9 +202,11 @@
 
         // Collect slider values
         const sliderValues = {};
-        for (let i = 1; i <= 6; i++) {
-            sliderValues[`slider${i}`] = document.getElementById(`slider${i}`).value;
-        }
+        const sliders = document.querySelectorAll('.slider-input, .slider-input-no-randomize');
+
+        sliders.forEach(slider => {
+            sliderValues[slider.id] = slider.value;
+        })
 
         if (!input.value.trim()) {
             output.textContent = 'Please enter some text';
@@ -241,6 +253,70 @@
             output.className = 'mt-4 text-center text-red-600';
         }
     }
+    // Add this script block after the existing handleSubmit function
+
+    // Function to fetch and display running jobs
+    async function fetchRunningJobs() {
+        const jobsContainer = document.getElementById('jobsContainer');
+
+        try {
+            const response = await fetch('/jobs', {
+                method: 'GET',
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+
+            if (response.ok) {
+                const jobs = await response.json();
+
+                // Clear previous jobs
+                jobsContainer.innerHTML = '';
+
+                // If no jobs, show a message
+                if (jobs.length === 0) {
+                    jobsContainer.innerHTML = '<p class="text-gray-500 text-center">No running jobs</p>';
+                    return;
+                }
+
+                // Create job list
+                const jobList = document.createElement('ul');
+                jobList.className = 'space-y-2';
+
+                jobs.forEach(job => {
+                    const jobItem = document.createElement('li');
+                    jobItem.className = 'bg-gray-100 p-2 rounded-md flex justify-between items-center';
+
+                    jobItem.innerHTML = `
+                        <div>
+                            <span class="font-medium">${job.id}</span>
+                            <span class="ml-2 text-sm text-gray-600">${job.name}</span>
+                        </div>
+                        <span class="text-sm ${job.status === 'running' ? 'text-green-600' : 'text-yellow-600'}">
+                            ${job.status}
+                        </span>
+                    `;
+
+                    jobList.appendChild(jobItem);
+                });
+
+                jobsContainer.appendChild(jobList);
+            } else {
+                jobsContainer.innerHTML = '<p class="text-red-500 text-center">Failed to load jobs</p>';
+            }
+        } catch (error) {
+            jobsContainer.innerHTML = `<p class="text-red-500 text-center">Error: ${error.message}</p>`;
+        }
+    }
+
+    // Add this to the page load to start periodic job checking
+    document.addEventListener('DOMContentLoaded', () => {
+        // Initial job fetch
+        fetchRunningJobs();
+
+        // Periodic job checking every 5 seconds
+        setInterval(fetchRunningJobs, 5000);
+    });
     </script>
 </body>
 </html>
